--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>Welcome to my webside!</h1>
+        <h1 style="colorblue;:">Welcome to my webside!</h1>
         <h2>Hello!</h2>
         Hello world!
     </body>
